@@ -4,6 +4,10 @@ namespace meteocontrol\client\vcomapi\filters;
 
 class ForecastCriteria extends MeasurementsCriteria {
 
+    const CATEGORY_DAY_AHEAD = 'dayAhead';
+    const CATEGORY_INTRADAY = 'intraday';
+    const CATEGORY_INTRADAY_OPTIMIZED = 'intradayOptimized';
+
     /**
      * @return int
      */
@@ -41,5 +45,26 @@ class ForecastCriteria extends MeasurementsCriteria {
      */
     public function getResolution(): string {
         return $this->filters['resolution'] ?? ForecastCriteria::RESOLUTION_FIFTEEN_MINUTES;
+    }
+
+    /**
+     * @param string $category ForecastCriteria::CATEGORY_DAY_AHEAD
+     *              | ForecastCriteria::CATEGORY_INTRADAY
+     *              | ForecastCriteria::CATEGORY_INTRADAY_OPTIMIZED
+     * @return MeasurementsCriteria
+     */
+    public function withCategory(string $category): self {
+        $this->filters['category'] = $category;
+        return $this;
+    }
+
+    /**
+     * @return string ForecastCriteria::CATEGORY_DAY_AHEAD
+     *              | ForecastCriteria::CATEGORY_INTRADAY
+     *              | ForecastCriteria::CATEGORY_INTRADAY_OPTIMIZED
+     *              | null
+     */
+    public function getCategory(): ?string {
+        return $this->filters['category'] ?? null;
     }
 }
