@@ -1,8 +1,0 @@
-{
-  "data": {
-    "result": 0,
-    "realLostYield": 41.29,
-    "comment": "",
-    "totalCompensation": 7.34962
-  }
-}
